# thai_movie_sentiment_wangchanberta

./: README.md  docker-compose.yml
jupyter/: Dockerfile  pyproject.toml
jupyter/notebook/: bert.ipynb
ml_data/: dev.csv  test.csv  train.csv
model_artifact/: tokenizer.json
python_script/: predict_from_pretrain.py  transform.py
python_script/.ipynb_checkpoints/: preprocess-checkpoint.py  training-checkpoint.py
