[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
ipywidgets = "^7.7.0"
widgetsnbextension = "^3.6.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.5.0"
statsmodels = "^0.13.2"
requests = "^2.27.1"
python = ">=3.9.13,<3.10.0"
scikit-learn = "^1.0.2"
matplotlib= "^3.2.2"
transformers = "^4.25.1"
datasets = "^2.8.0"
sentencepiece = "^0.1.97"
numpy = "^1.24.1"
pandas = "^1.5.2"
protobuf = "<=3.20"
torch = "^1.13.1"
[tool.poetry.urls]
dependencies_1 = "https://github.com/palash1992/GEM.git"
dependencies_2 = "https://github.com/stellargraph/stellargraph.git" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
